tests/error/misc_errors/pattern_many_args1.err
Error: Too many arguments (at $FILE:11:13)
   | 
 9 | def main(p: Point, x: int) -> None:
10 |     match p:
11 |         case Point(1,3,4):
   |              ^^^^^^^^^^^^ Expected 2, got 3

Guppy compilation failed due to 1 previous error
